syntax = "proto3";

package grill.v1;

import "google/protobuf/timestamp.proto";

enum Role {
  ROLE_UNSPECIFIED = 0;
  ROLE_ADMIN = 1;
  ROLE_USER = 2;
}

message User {
  string username = 1;
  string full_name = 2;
  string email = 3;
  Role role = 4;
  google.protobuf.Timestamp password_changed_at = 5;
  google.protobuf.Timestamp created_at = 6;
}

